fix: footer alignments and 100% width for main page

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -4,6 +4,8 @@
     align-items: center;
     padding: 10px 30px;
     display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
     color: var(--secondary-text-color);
     position: fixed;
     bottom: 0;
